Added StanDump as a requirement.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ script:
   - cd $HOME/cmdstan; git checkout v2.15.0; make stan-update; make build
   - export CMDSTAN_HOME=$HOME/cmdstan
   - cd $TRAVIS_BUILD_DIR
+  - julia -e 'Pkg.clone("https://github.com/tpapp/StanDump.jl.git")'
   - julia -e 'Pkg.clone(pwd()); Pkg.build("StanRun"); Pkg.test("StanRun"; coverage=true)'
 after_success:
   # push coverage results to Coveralls
