Added simple test case (Bernoulli).

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 *.jl.cov
 *.jl.*.cov
 *.jl.mem
+/test/bernoulli/bernoulli
+/test/bernoulli/bernoulli-samples-1.csv
+/test/bernoulli/bernoulli.data.R
+/test/bernoulli/bernoulli.hpp
