Added sample file to ignore list.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /test/bernoulli/bernoulli-samples-1.csv
 /test/bernoulli/bernoulli.data.R
 /test/bernoulli/bernoulli.hpp
+/test/bernoulli/bernoulli-samples-2.csv
